--- a/src/components/graph.css
+++ b/src/components/graph.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Cinzel+Decorative:400,900);
+
 .example-appear {
     opacity: 0.01;
   }
@@ -45,9 +47,18 @@
 input
 {
 	font-family:Monotype Corsiva;
-  font-size: 16px; 
+  font-size: 16px;
   border-radius: 3px;
 }
 .input::selection{
   border-color: #33cc33;
+}
+rect {
+  width: 100%;
+  height: 100%;
+  opacity: 0
+}
+.h1
+{
+  font-family:'Georgia',cursive;
 }
